# ceph-command-kb

./: .gitignore  BOB_INTEGRATION_GUIDE.md  DEVELOPMENT.md  README.md  SPEC.md  USER_GUIDE.html  config.yaml  generate_reference.py  import_configs.py  pyproject.toml  reparse_kb.py  update_from_help.py
.cursor/rules/: command-verification.mdc
examples/: bob_agent_integration.py
knowledge/ceph-20.2.1-tentacle/: configs.json  metadata.json  search_index.json
src/ceph_command_kb/: __init__.py  config.py  log.py  models.py  version.py
src/ceph_command_kb/discovery/: cache.py  engine.py  executor.py
src/ceph_command_kb/parsing/: argparse_parser.py  base.py  boost_parser.py  ceph_parser.py  generic_parser.py  registry.py
src/ceph_command_kb/server/: mcp_server.py  rest_api.py
src/ceph_command_kb/storage/: config_loader.py  json_writer.py  markdown_writer.py  raw_help_writer.py  search_index.py
src/ceph_command_kb/validation/: cleanup_pairs.py  extractor.py  report.py  risk_patterns.py  validator.py
tests/: conftest.py  test_cache.py  test_config.py  test_executor.py  test_extractor.py  test_mcp_server.py  test_models.py  test_parsers.py  test_storage.py  test_validator.py
tests/fixtures/: ceph_authtool_h.txt  ceph_h.txt  ceph_volume_h.txt  cephadm_h.txt  rbd_h.txt  sample_cephci_test.py  sample_shell_test.sh
vscode-extension/: README.md  extension.js  package-lock.json  package.json
